--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@merc/react-timeline": "^0.1.42",
+    "axios": "^1.7.8",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
